<resources>
    <string name="app_name">Grimes C868 PA</string>
    <string name="send_email_to_hint">To: one@school.edu, two@school.edu</string>
    <string name="send_email_subject_hint">Subject:</string>
    <string name="send_email_message_hint">Message:</string>
    <string name="send_email_button_text">send</string>
    <string name="assessment_title_hint">Title</string>
    <string name="assessment_type_text">Assessment Type</string>
    <string name="assessment_status_text">Status</string>
    <string name="assessment_end_date_text">End Date</string>
    <string name="assessment_end_date_value_hint">Select End Date</string>
    <string name="assessment_end_date_alert_content_description">End Date Alarm</string>
    <string name="title_terms">Terms</string>
    <string name="title_new_term">New Term</string>
    <string name="title_edit_term">Edit Term</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="title_new_course">New Course</string>
    <string name="title_edit_course">Edit Course</string>
    <string name="main_assessments">Assessments</string>
    <string name="main_courses">Courses</string>
    <string name="main_in_progress">In Progress</string>
    <string name="main_completed">Completed</string>
    <string name="main_failed">Failed</string>
    <string name="main_dropped">Dropped</string>
    <string name="main_pending">Pending</string>
    <string name="main_passed">Passed</string>
    <string name="main_button_term_list">Term List</string>
    <string name="main_button_add_samples">Add Sample Data</string>
    <string name="main_button_delete_all">Delete All Data</string>
    <string name="course_title_hint">Course Title</string>
    <string name="course_code_hint">Course Code (ex: C999)</string>
    <string name="course_competency_units_text">Competency Units</string>
    <string name="course_competency_units_hint">Select CUs</string>
    <string name="course_status_text">Status</string>
    <string name="course_start_date_hint">Select Start Date</string>
    <string name="course_start_date_text">Start Date</string>
    <string name="course_start_date_alert_content_description">Start Date Alert</string>
    <string name="course_end_date_alert_content_description">End Date Alert</string>
    <string name="course_end_date_text">End Date</string>
    <string name="course_end_date_hint">Select End Date</string>
    <string name="course_notes_button_text">Course Notes</string>
    <string name="course_mentors_button_text">Course Mentors</string>
    <string name="mentor_first_name_hint">First Name</string>
    <string name="mentor_last_name_hint">Last Name</string>
    <string name="mentor_phone_number_hint">Phone Number</string>
    <string name="mentor_email_address_hint">Email Address</string>
    <string name="note_title_hint">Title</string>
    <string name="note_description_hint">Description</string>
    <string name="note_button_text">Send note as an email</string>
    <string name="term_title_hint">Enter Term Title</string>
    <string name="term_start_date_text">Start Date</string>
    <string name="term_start_date_hint">Select Start Date</string>
    <string name="term_end_date_text">End Date</string>
    <string name="term_end_date_hint">Select End Date</string>
    <string name="course_competency_units_badge_content_description">Course Competency Units Badge</string>
    <string name="competency_unit_badge_text">4</string>
    <string name="course_competency_units_badge_background_content_description">Course Competency Units Badge Background</string>
    <string name="course_assessment_performance_type_text">P</string>
    <string name="course_competency_unit_text">4</string>
    <string name="course_mentor_name_text">Name</string>
    <string name="course_mentor_phone_text">(999) 999–9999</string>
    <string name="course_mentor_email_text">some.decently.longname@email.eml</string>
    <string name="note_title_text">title</string>
    <string name="note_description_text">description</string>
    <string name="term_title_text">Spring Term 2020</string>
    <string name="term_date_range_text">April 1, 2020 - Sep 30, 2020</string>
    <string name="term_total_cus_text">Total CUs:</string>
    <string name="term_competency_units_text">99</string>
    <string name="number_picker_cancel_button_text">Cancel</string>
    <string name="number_picker_set_button_text">Set</string>
    <string name="save_assessment_title">Save Assessment</string>
    <string name="delete_assessment_title">Delete Assessment</string>
    <string name="save_course_title">Save Course</string>
    <string name="delete_course_title">Delete Course</string>
    <string name="save_note_title">Save Note</string>
    <string name="delete_note_title">Delete Note</string>
    <string name="send_email_title">Send</string>
    <string name="save_term_title">Save Term</string>
    <string name="delete_term_title">Delete Term</string>
    <string name="save_account_title">Save Account</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="add_sample_terms_title">Add sample terms</string>
    <string name="delete_all_terms_title">Delete all terms</string>
    <string name="ASSESSMENT_TITLE_KEY">assessment.title.key</string>
    <string name="ASSESSMENT_TYPE_KEY">assessment.type.key</string>
    <string name="ASSESSMENT_STATUS_KEY">assessment.status.key</string>
    <string name="ASSESSMENT_END_DATE_KEY">assessment.endDate.key</string>
    <string name="ASSESSMENT_END_DATE_ALARM_KEY">assessment.endDateAlarm.key</string>
    <string name="COURSE_TITLE_KEY">course.title.key</string>
    <string name="COURSE_CODE_KEY">course.code.key</string>
    <string name="COURSE_COMPETENCY_UNITS_KEY">course.cus.key</string>
    <string name="COURSE_STATUS_KEY">course.status.key</string>
    <string name="COURSE_START_DATE_KEY">course.startDate.key</string>
    <string name="COURSE_END_DATE_KEY">course.endDate.key</string>
    <string name="COURSE_START_DATE_ALARM_KEY">course.startDateAlarm.key</string>
    <string name="COURSE_END_DATE_ALARM_KEY">course.endDateAlarm.key</string>
    <string name="MENTOR_FIRST_NAME_KEY">mentor.firstName.key</string>
    <string name="MENTOR_LAST_NAME_KEY">mentor.lastName.key</string>
    <string name="MENTOR_PHONE_NUMBER_KEY">mentor.phoneNumber.key</string>
    <string name="MENTOR_EMAIL_KEY">mentor.email.key</string>
    <string name="NOTE_TITLE_KEY">note.title.key</string>
    <string name="NOTE_DESCRIPTION_KEY">note.description.key</string>
    <string name="TERM_TITLE_KEY">term.title.key</string>
    <string name="TERM_START_DATE_KEY">term.startDate.key</string>
    <string name="TERM_END_DATE_KEY">term.endDate.key</string>
    <string name="ACCOUNT_USERNAME_KEY">account.username.key</string>
    <string name="ACCOUNT_PASSWORD_KEY">account.password.key</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="student_scheduler">Student Scheduler</string>
    <string name="title_course_mentors">Course Mentors</string>
    <string name="title_course_notes">Course Notes</string>
    <string name="title_send_email">Send Email</string>
    <string-array name="assessment_types">
        <item>Performance</item>
        <item>Objective</item>
    </string-array>
    <string-array name="status_values">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Complete</item>
        <item>Dropped</item>
        <item>Failed</item>
    </string-array>
    <string-array name="assessment_values">
        <item>Pending</item>
        <item>Pass</item>
        <item>Fail</item>
    </string-array>
    <string-array name="competency_unit_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
