<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/edit_text_user_name"
        android:layout_width="190dp"
        android:layout_height="@dimen/login_text_height"
        android:layout_marginTop="160dp"
        android:background="#ffffff"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="190dp"
        android:layout_height="@dimen/login_text_height"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="190dp"
        android:layout_height="@dimen/login_text_height"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="190dp"
        android:layout_height="@dimen/login_text_height"
        android:layout_marginTop="20dp"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered"/>
        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>