<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MentorEditorActivity">

    <EditText
        android:id="@+id/edit_text_mentor_editor_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:hint="@string/mentor_first_name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_mentor_editor_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:hint="@string/mentor_last_name_hint"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edit_text_mentor_editor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:ems="10"
        android:hint="@string/mentor_phone_number_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit_text_mentor_editor_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:ems="10"
        android:hint="@string/mentor_email_address_hint"
        android:inputType="textEmailAddress" />

</LinearLayout>
