<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/edit_text_send_email_text_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:hint="@string/send_email_to_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_text_send_email_text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:hint="@string/send_email_subject_hint"
        android:inputType="textEmailSubject" />

    <EditText
        android:id="@+id/edit_text_send_electronic_mail_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:gravity="start|top"
        android:hint="@string/send_email_message_hint"
        android:inputType="textMultiLine"
        android:lines="10" />

</LinearLayout>