<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.NoteEditorActivity">

    <EditText
        android:id="@+id/edit_text_note_editor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:hint="@string/note_title_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_note_editor_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="auto"
        android:layout_below="@id/edit_text_note_editor_title"
        android:hint="@string/note_description_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_open_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonStyleInset"
        android:paddingHorizontal="16dp"
        android:text="@string/note_button_text"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom|center" />

</RelativeLayout>
